Clean up Gemfile. Add lock to jekyll 3.6. Remove sample blogs.

--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ defaults:
       pinned: 0
 # Build settings
 markdown: kramdown
-gems:
+plugins:
   - jekyll-feed
   - octopress-paginate
 exclude:
