--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 title: "My Site"
 email: your-email@domain.com
 # This *MUST* be defined. If content served from root path set to empty string *NOT* "/".
-baseurl: "jekyll-bootstrap-structure"
+baseurl: ""
 url: ""
 # Build settings
 # If you install this theme as a ruby gem theme uncomment this line.
@@ -58,5 +58,6 @@ navbar:
   logo: /assets/brand-logo.png
   social:
     github: /
+    gitlab: /
     stack-overflow: /
     twitter: /
