Add build scripts.

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: "My Site"
 email: your-email@domain.com
 # This *MUST* be defined. If content served from root path set to empty string *NOT* "/".
 # Set to /jekyll-bootstrap-structure/ here so demo site serves from gh-pages automatically.
-baseurl: "/jekyll-bootstrap-structure/"
+baseurl: ""
 url: ""
 # Build settings
 # If you install this theme as a ruby gem theme uncomment this line.
@@ -25,6 +25,7 @@ exclude:
   - README.md
   - LICENSE.txt
   - ruby
+  - "*.sh"
 include:
   - node_modules
   - .nojekyll
