--- a/_config.yml
+++ b/_config.yml
@@ -64,7 +64,8 @@ navbar:
     Contact: /contact/
     About: /about/
     Posts: /posts/
-  logo: /assets/brand-logo.png
+  # logo: /assets/brand-logo.png
+  home-icon: 1
   social:
     github: /
     gitlab: /
